--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "apolloCompile": "graphql-codegen",
+    "apolloWatch": "graphql-codegen -w"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "graphql": "^16.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -18,9 +22,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@graphql-codegen/cli": "^2.15.0",
+    "@graphql-codegen/client-preset": "^1.2.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.3"
   },
   "private": true
 }
