--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-svg": "^13.6.0",
+    "react-native-web": "~0.18.9",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -26,6 +28,8 @@
     "@graphql-codegen/client-preset": "^1.2.1",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.2.0",
     "typescript": "^4.9.3"
   },
   "private": true
