--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/native-stack": "^6.9.4",
     "expo": "~47.0.8",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "graphql": "^16.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.7.1",
     "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.6.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
