--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "apolloCompile": "graphql-codegen",
-    "apolloWatch": "graphql-codegen -w"
+    "test": "jest --watch --silent --coverage=false"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^11.5.0",
+    "cross-fetch": "^3.1.5",
     "expo": "~47.0.8",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "graphql": "^16.6.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.7.1",
@@ -27,17 +32,38 @@
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.6.0",
     "react-native-web": "~0.18.9",
+    "react-test-renderer": "^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@graphql-codegen/cli": "^2.15.0",
     "@graphql-codegen/client-preset": "^1.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.26",
     "@types/styled-components-react-native": "^5.2.0",
+    "jest-environment-jsdom": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx}",
+      "!**/coverage/**",
+      "!**/node_modules/**",
+      "!**/babel.config.js",
+      "!**/jest.setup.js"
+    ]
+  }
 }
