--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-icons": "^4.7.1",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-size-matters": "^0.4.0",
